Add Ramadan Market showcase with 22 vendor demo sites

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <div class="container">
         <div class="header-inner">
             <a href="#" class="logo">Flowly</a>
+            <a href="#ramadan" style="color: var(--gray); margin-right: 20px;">Ramadan Market</a>
             <a href="#contact" class="header-cta">Get Started</a>
         </div>
     </div>
@@ -423,6 +424,238 @@
                     <h3>Your Website?</h3>
                     <p>Let's build something amazing for your business. Professional site, $100.</p>
                     <a href="#contact" class="portfolio-link">Get Started →</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Ramadan Market Showcase -->
+<section class="section" id="ramadan">
+    <div class="container">
+        <div class="section-header">
+            <h2>Ramadan <span>Market</span></h2>
+            <p>Demo websites built for ATX Ramadan Bazaar vendors</p>
+        </div>
+        <div class="portfolio-grid">
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #1a5f5a 0%, #134845 100%);">
+                    <span class="portfolio-badge">Textiles</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Ahenk Home</h3>
+                    <p>Prayer rugs & home textiles for sacred spaces.</p>
+                    <a href="ramadan/ahenk-home.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #8b5a3c 0%, #6d4630 100%);">
+                    <span class="portfolio-badge">Fashion</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Husnulain</h3>
+                    <p>Premium desi wear for Ramadan & Eid.</p>
+                    <a href="ramadan/husnulain.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #8b7355 0%, #6d5a43 100%);">
+                    <span class="portfolio-badge">Hijabs</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Graceful Scarfs</h3>
+                    <p>Elegant hijabs & jewelry for taraweeh.</p>
+                    <a href="ramadan/graceful-scarfs.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #b08968 0%, #8b6b4e 100%);">
+                    <span class="portfolio-badge">Hijabs</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Arabisk Boutique</h3>
+                    <p>Premium hijabs from Kuwait.</p>
+                    <a href="ramadan/arabisk-boutique.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #111 0%, #1a1a1a 100%);">
+                    <span class="portfolio-badge">Jewelry</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Haus of Z</h3>
+                    <p>Bold, unique statement jewelry.</p>
+                    <a href="ramadan/haus-of-z-jewelry.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #9c7a4a 0%, #7d6239 100%);">
+                    <span class="portfolio-badge">Jewelry</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Moti Jewelry</h3>
+                    <p>Luxurious, trendy jewelry pieces.</p>
+                    <a href="ramadan/moti-jewelry.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #2d4a3e 0%, #1e3329 100%);">
+                    <span class="portfolio-badge">Jewelry</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>NationGem</h3>
+                    <p>Premium gemstone jewelry.</p>
+                    <a href="ramadan/nationgem.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #c77dff 0%, #a855f7 100%);">
+                    <span class="portfolio-badge">Jewelry</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Fashion 786 Fusion</h3>
+                    <p>Trendy fusion jewelry & accessories.</p>
+                    <a href="ramadan/fashion-fusion.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #0d0d12 0%, #16161d 100%);">
+                    <span class="portfolio-badge">Jewelry</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Selene by Ayesha</h3>
+                    <p>Moon-inspired elegant designs.</p>
+                    <a href="ramadan/selene-by-ayesha.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #e8a4b8 0%, #c98299 100%);">
+                    <span class="portfolio-badge">Crafts</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>C is for Crafting</h3>
+                    <p>Personalized gifts by Laila.</p>
+                    <a href="ramadan/c-is-for-crafting.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #c9a86c 0%, #b08d4f 100%);">
+                    <span class="portfolio-badge">Gifts</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Gifty by AI</h3>
+                    <p>Handcrafted Ramadan gifts & decor.</p>
+                    <a href="ramadan/gifty-by-ai.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #e85d5d 0%, #d04848 100%);">
+                    <span class="portfolio-badge">Crafts</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Tulip Hut</h3>
+                    <p>Handmade to inspire by Saleha.</p>
+                    <a href="ramadan/tulip-hut.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #9b7e6a 0%, #7d6456 100%);">
+                    <span class="portfolio-badge">Art</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Pinora by Huda</h3>
+                    <p>Original artwork & designs.</p>
+                    <a href="ramadan/pinora-by-huda.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #5c4a3d 0%, #3d3128 100%);">
+                    <span class="portfolio-badge">Art</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Art by 3afaf</h3>
+                    <p>Beautiful curated art pieces.</p>
+                    <a href="ramadan/art-by-3afaf.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #0a0a0a 0%, #141414 100%);">
+                    <span class="portfolio-badge">Apparel</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>2009 Apparel</h3>
+                    <p>Streetwear hoodies & tees.</p>
+                    <a href="ramadan/2009-apparel.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #5a67d8 0%, #4c51bf 100%);">
+                    <span class="portfolio-badge">Fitness</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>A Better Force</h3>
+                    <p>Women-led performance initiative.</p>
+                    <a href="ramadan/a-better-force.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #d4a574 0%, #5c4033 100%);">
+                    <span class="portfolio-badge">Food</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Nadia's Baklava</h3>
+                    <p>Handmade Middle Eastern sweets.</p>
+                    <a href="ramadan/nadia-baklava.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #2d5a27 0%, #1e3d1a 100%);">
+                    <span class="portfolio-badge">Farm</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Green Crescent Farm</h3>
+                    <p>Organic produce & dates.</p>
+                    <a href="ramadan/green-crescent-farm.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #5c4033 0%, #3d2a22 100%);">
+                    <span class="portfolio-badge">Halal</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Halal Heritage Farm</h3>
+                    <p>Pasture-raised halal meats.</p>
+                    <a href="ramadan/halal-heritage-farm.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #6b8e23 0%, #556b2f 100%);">
+                    <span class="portfolio-badge">Imports</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Olive Branch Imports</h3>
+                    <p>Mediterranean specialty foods.</p>
+                    <a href="ramadan/olive-branch-imports.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #d4a84b 0%, #b8963f 100%);">
+                    <span class="portfolio-badge">Spices</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Saffron Spice Co</h3>
+                    <p>Premium spices & blends.</p>
+                    <a href="ramadan/saffron-spice-co.html" target="_blank" class="portfolio-link">View Demo →</a>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <div class="portfolio-image" style="background: linear-gradient(135deg, #c9a227 0%, #a68b1f 100%);">
+                    <span class="portfolio-badge">Dates</span>
+                </div>
+                <div class="portfolio-info">
+                    <h3>Oasis Dates Co</h3>
+                    <p>Premium stuffed dates & treats.</p>
+                    <a href="ramadan/oasis-dates-co.html" target="_blank" class="portfolio-link">View Demo →</a>
                 </div>
             </div>
         </div>
